--- a/src/index.a.css
+++ b/src/index.a.css
@@ -3,59 +3,16 @@
 @tailwind utilities;
 
 
-:host {
-  display: flex;
-  width: 210mm;
-  height: 105mm;
-  border: 1pt solid #000;
-  font-family: LiberationSans, sans-serif;
-  font-weight: 400;
-  color: #000;
+
+@layer base {
+  :host {
+    @apply flex w-210 h-105 bg-white border border-solid border-black font-sans font-normal text-black;
+  }
+  
+  :host * {
+    box-sizing: border-box;
+  }
 }
 
-:host * {
-  box-sizing: border-box;
-}
 
-.title {
-  height: 7mm;
-  font-weight: 700;
-  font-size: 11pt;
-  line-height: 1;
-}
-
-.receipt {
-  display: flex;
-  flex-direction: column;
-  width: 62mm;
-  padding: 5mm;
-  border-right: 1pt solid #000;
-}
-
-.receipt .heading {
-  font-weight: 700;
-  font-size: 6pt;
-  line-height: 9pt;
-}
-
-.receipt .value {
-  font-size: 8pt;
-  line-height: 9pt;
-  margin-bottom: 9pt;
-}
-
-.receipt .information {
-  height: 56mm;
-}
-
-.receipt .amount {
-  height: 14mm;
-}
-
-.receipt .acceptance-point {
-  height: 18mm;
-}
-
-.payment-part {
-  width: 148mm;
-}
+/* @layer utilities {} */
