--- a/src/index.a.css
+++ b/src/index.a.css
@@ -16,16 +16,26 @@
 
 
 @layer utilities {
-  .scissors-right {
+  .scissors-br,
+  .scissors-tr {
     position: relative;
   }
 
-  .scissors-right:before {
+  .scissors-br:before {
+    display: block;
+    position: absolute;
+    bottom: 0;
+    right: 0;
+    content: "\2701";
+    transform: translate(1mm, -4.65mm) rotate(-83deg);
+  }
+
+  .scissors-tr:before {
     display: block;
     position: absolute;
     top: 0;
     right: 0;
-    content: "\2703";
-    transform: translate(3pt, 12pt) rotate(84deg);
+    content: "\2701";
+    transform: translate(-5.2mm, -1.8mm) rotate(-173deg);
   }
 }
